--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="heart-icone.ico" type="image/x-icon">
     <title>Hierarquia de Títulos</title>
 </head>
 <body>
-    
+    <h1>Farmacologia</h1>
+        <h2>Introdução</h2>
+            <h3>Oque é Farmacologia?</h3>
+            <h3>Oque é Farmacocinética?</h3>
+            <h3>Quais as Principais Vias de Adiministração de Farmacos?</h3>
+            <p>A via de administração é determinada primariamente pelas propriedades do fármaco (p. ex., hidro ou lipossolubilidade, ionização) e pelos objetivos terapêuticos (p. ex., necessidade de um início rápido de ação, necessidade de tratamento por longo tempo, ou restrição de acesso a um local específico). As vias principais de administração de fármacos incluem a enteral, a parenteral e a tópica, entre outras. </p>
+                <h4>Enteral</h4>
+                <p>A administração enteral, ou administração pela boca, é o modo mais seguro, comum, conveniente e econômico de administrar os fármacos. O fármaco pode ser deglutido, por via oral, ou pode ser colocado sob a língua (sublingual) ou entre a bochecha e a gengiva (bucal), facilitando a absorção direta na circulação sanguínea. </p>
+                    <h5>Via Oral</h5>
+                    <p>A administração oral oferece várias vantagens. Os fármacos orais são facilmente autoadministrados, e a toxicidade e/ou a dosagem excessiva podem ser neutralizadas com antídotos como o carvão ativado. Porém, as vias envolvidas na absorção oral são as mais complicadas, e o baixo pH do estômago inativa alguns fármacos. Uma ampla variedade de preparações orais é disponibilizada, incluindo preparações revestidas (entéricas) e de liberação prolongada.  
+                    </p>
+                    <h5>Sublingual e bucal</h5>
+                    <p>A colocação do fármaco sob a língua permite que ele se difunda na rede capilar e, assim, entre diretamente na circulação sistêmica. A administração sublingual tem várias vantagens, incluindo facilidade de administração, absorção rápida, ultrapassagem do ambiente gastrintestinal (GI) hostil e capacidade de evitar a biotransformação de primeira passagem (ver discussão adiante). A via bucal (entre a bochecha e a gengiva) é similar à via sublingual. </p>
+                <h4>Parental</h4>
+                    <h5>Intravenosa(IV)</h5>
+                    <h5>Intramuscular(IM)</h5>
+                    <h5>Subcutânea(SC)</h5>
+        <h2>Classificação dos Farmacos</h2>
+            <h3>Classificação por Ação Farmacologica</h3>
+                <h4>Analgésicos</h4>
+                <h4>Anti-inflamatórios</h4>
+                <h4>Antibióticos</h4>
+                <h4>Antidepressivos</h4>
+                <h4>Anticonvulsionantes</h4>
+                <h4>Anti-hipertensivos</h4>
+                <h4>Antidiabéticos</h4>
+
 </body>
 </html>
